# Whatsapp_UOE_AI_ASSISTANT

./: README.md
backend/: .env.example  .gitignore  build.sh  debug_chat.py  feedback_log.jsonl  main.py  pyproject.toml  requirements.txt  whatsapp_router.py
backend/Data_Ingestion/: DOCUMENTATION.md  pinecone_ingestion.py  processed_files.json
backend/rag_pipeline/: __init__.py  config.py  generator.py  memory.py  pipeline.py  query_enhancer.py  reranker.py  retriever.py
backend/rag_pipeline/smart_rag/: __init__.py  config.py  grader.py  processor.py  rewriter.py
backend/system_prompts/: bs_adp_systemprompt.txt  ms_phd_systemprompt.txt  query_enhancer_prompt.txt  rules&regulations.txt  smart_grading_prompt.txt  smart_rewrite_prompt.txt
